@@ -1,3 +1,9 @@
+1999-07-13    <hp@dhcpd7.redhat.com>
+
+	* gnome-util.c: Remove g_filename_index() and g_filename_pointer()
+	cruft (already #if 0)
+	(gnome_datadir_file): wrong function name in inline docs
+	
 1999-06-12  Miguel de Icaza  <miguel@gnu.org>
 
 	* gnome-paper.c (paper_init): Push an empty configuration prefix. 
